--- a/src/app/pages/projects/projectgrid/projectgrid.component.html
+++ b/src/app/pages/projects/projectgrid/projectgrid.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="px-4 py-3 border-top">
           <ul class="list-inline mb-0">
-            <li class="list-inline-item me-3">
+            <li class="list-inline-item me-3" title="Scan Status" tooltip="Scan Status">
               <span class="badge" [ngClass]="{ 'bg-success': grid.comment <= 10,
                     'bg-warning': grid.comment > 10 && grid.comment <= 20,
                     'bg-danger': grid.comment > 20 }">{{grid.status}}</span>
