--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -25,6 +25,7 @@
       <button type="button" class="btn btn-sm px-3 font-size-16 header-item" [ngClass]="{ 'd-none': theme === 'horizontal' }" id="vertical-menu-btn" (click)="toggleMobileMenu($event)">
         <i class="fa fa-fw fa-bars"></i>
       </button>
+     
 
       <!-- App Search-->
       <form class="app-search d-none d-lg-block">
@@ -35,11 +36,11 @@
       </form>
 
       <div class="dropdown-mega d-none d-lg-block ms-2" dropdown>
-        <button type="button" class="btn header-item" dropdownToggle data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+      <!--   <button type="button" class="btn header-item" dropdownToggle data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
           {{ 'HEADER.MEGA_MENU' | translate}}
           <i class="mdi mdi-chevron-down"></i>
-        </button>
-        <div class="dropdown-menu dropdown-megamenu" *dropdownMenu>
+        </button> -->
+       <!--  <div class="dropdown-menu dropdown-megamenu" *dropdownMenu>
           <div class="row">
             <div class="col-sm-8">
 
@@ -161,8 +162,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
+        </div>-->
+      </div> 
     </div>
 
     <div class="d-flex">
