--- a/src/app/shared/ui/pagetitle/pagetitle.component.html
+++ b/src/app/shared/ui/pagetitle/pagetitle.component.html
@@ -8,11 +8,54 @@
           @for(item of breadcrumbItems;track $index){
           <ng-container>
             @if(item.active){
-            <li class="breadcrumb-item active">{{ item.label }}
+            <li class="breadcrumb-item active" *ngIf="item.label != 'Projects Grid'">{{ item.label }}
             </li>
             }@else{
-            <li class="breadcrumb-item"><a href="javascript: void(0);">{{ item.label }}</a>
-            </li>}
+            <li class="breadcrumb-item" *ngIf="item.label != 'Projects'"><a href="javascript: void(0);">{{ item.label }}</a>
+            </li>
+            <li class="breadcrumb-item" *ngIf="item.label == 'Projects'" style="cursor: pointer; font-size:16px;">
+              <div>
+                <button type="button" class="btn btn-primary waves-effect waves-light" data-bs-toggle="modal" data-bs-target="#myModal" (click)="openModal(content)">Add New Repo</button>
+                <ng-template #content role="document" let-modal>
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="myModalLabel">Create a new repository</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="modalRef.hide()"></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>A repository contains all project files, including the revision history. Already have a project repository elsewhere? <a href="#" (click)="disableLink($event)">Import a repository.</a></p>
+                    <div style="display: flex;">
+                      <div style="width:150px;">
+                        <label for="example-text-input" class="col-form-label">Repository Name *</label>
+                      </div>
+                        <div style="margin-left:10px;">
+                          <input class="form-control" type="text" id="reponame" style="width:300px">
+                        </div>
+                    </div>
+                    <div style="display: flex; margin-top:10px;">
+                      <div style="width:150px;">
+                        <label for="example-text-input" class="col-form-label">Description (Optional)</label>
+                      </div>
+                        <div style="margin-left:10px;">
+                          <input class="form-control" type="text" id="descript" style="width:300px">
+                        </div>
+                    </div>
+                    <div style="display: flex; margin-top:10px;">
+                      <div style="width:150px;">
+                        <label for="example-text-input" class="col-form-label">Location</label>
+                      </div>
+                        <div style="margin-left:10px;">
+                          <input class="form-control" type="text" id="location" style="width:300px">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal" (click)="modalRef.hide()">Close</button>
+                    <button type="button" class="btn btn-primary waves-effect waves-light">Create Repository</button>
+                  </div>
+                </ng-template>
+              </div>
+            </li>
+          }
           </ng-container>
           }
         </ol>
