--- a/src/app/pages/filemanager/filemanager.component.html
+++ b/src/app/pages/filemanager/filemanager.component.html
@@ -12,7 +12,8 @@
                                 <div class="mb-3">
                                     <div class="dropdown" dropdown>
                                         <button class="btn btn-light dropdown-toggle w-100" dropdownToggle type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                             Repo Name
+vul-scan-repo
+
                                         </button>
                                         <div class="dropdown-menu" *dropdownMenu>
                                             <a class="dropdown-item" href="javascript: void(0);"><i class="bx bx-folder me-1"></i> Folder</a>
@@ -68,12 +69,11 @@
                                         <form class="mt-4 mt-sm-0 float-sm-end d-flex align-items-center">
                                             <div class="search-box mb-2 me-2">
                                                 <div class="position-relative">
-                                                    <input type="text" class="form-control bg-light border-light rounded" placeholder="Search...">
-                                                    <i class="bx bx-search-alt search-icon"></i>
+                                                    <button class="btn btn-light ms-0" type="button" id="password-addon"(click)="showAllVul()" >Show All Vulnerabilties</button>
                                                 </div>
                                             </div>
 
-                                            <div class="dropdown mb-0" dropdown>
+                            <!--                 <div class="dropdown mb-0" dropdown>
                                                 <a class="btn btn-link text-muted dropdown-toggle mt-n2" dropdownToggle role="button" data-toggle="dropdown" aria-haspopup="true">
                                                     <i class="mdi mdi-dots-vertical font-size-20"></i>
                                                 </a>
@@ -83,15 +83,17 @@
                                                     <a class="dropdown-item" href="javascript: void(0);">Share with me</a>
                                                     <a class="dropdown-item" href="javascript: void(0);">Other Actions</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </form>
                                     </div>
                                 </div>
                             </div>
                             <div *ngIf="fileContent && fileContent['path']">
                                 <div class="row file-content" style="max-height: 450px; max-width: 1024px;overflow-y: auto;overflow-x: auto;">
-                                    <pre class="line-numbers" [innerHTML]="fileContent['content']"></pre>
+                                    <pre class="line-numbers" [innerHTML]="displayedContent"></pre>
                                 </div>
+                                <br>
+                                <p *ngIf="commit && commit===true">Do you want to commit the changes and push to the repository and rerun the SCANS? <button (click)="commitChanges()" class="btn btn-success" style="font-size: 12px;" type="button" id="password-addon">  <i class="bx bxs-magic-wand"></i> Commit & Run</button></p>
                             </div>
 
                             <div class="mt-4">
@@ -110,7 +112,7 @@
                                         <div class="card-body">
                                             <div class="d-flex flex-wrap align-items-start">
                                                 <div class="me-2">
-                                                    <h5 class="card-title mb-0">Scan Results</h5>
+                                                    <h5 class="card-title mb-0">Scan Results (Open Vulnerablility)</h5>
                                                 </div>
                                                 <div class="ms-auto">
                         
@@ -118,9 +120,9 @@
                                             </div>
                                             <tabset class="nav-tabs nav-tabs-custom card-header-tabs custom-widget-nav ms-auto">
                                                 <tab heading="Static" class="mt-4">
-                                                    <ngx-simplebar style="max-height: 500px;">
+                                                    <ngx-simplebar style="max-height: 600px;">
                                                         <ul class="list-group list-group-flush">
-                                                            <li class="list-group-item py-3" *ngFor="let data of staticdata; let i = index">
+                                                            <li class="list-group-item py-3" *ngFor="let data of filteredStaticData; let i = index">
                                                                 <div class="d-flex">
                                                                    
                                                                     <div class="align-self-center overflow-hidden me-auto">
@@ -135,26 +137,26 @@
                                                                             </div>
 
                                                                             <p> Recommended fix</p>
-                                                                            <div class="row file-content" style="max-height: 450px; max-width: 1024px;overflow-y: auto;overflow-x: auto;">
-                                                                                <pre class="line-numbers" [innerHTML]="data.recommended_code_fix"></pre>
+                                                                            <div class="row file-content" style="max-height: 450px; overflow-y: auto;">
+                                                                                <pre class="line-numbers" [innerHTML]="data.recommendations"></pre>
                                                                             </div>
+                                                                            <br>
+                                                                            File Name : <label (click)="getFileData(data['Scanning'],id)" style="color: #3f09f1;text-decoration: underline;cursor: pointer;">{{data['Scanning']}}</label>
                                                                         </div>
                                                                     </div>
-                        
-                                                                    <div class="dropdown ms-2" dropdown>
-                                                                        <a class="text-muted font-size-14" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-                                                                            <i class="mdi mdi-dots-horizontal"></i>
-                                                                        </a>
-                        
-                                                                        <div class="dropdown-menu dropdown-menu-end" *dropdownMenu>
-                                                                            <a class="dropdown-item" href="javascript:void(0);">Action</a>
-                                                                            <a class="dropdown-item" href="javascript:void(0);">Another
-                                                                                action</a>
-                                                                            <a class="dropdown-item" href="javascript:void(0);">Something
-                                                                                else
-                                                                                here</a>
+                                                                    <div class="ms-auto" *ngIf="data.autoFixed && data.autoFixed ==='false'">
+                                                                        <div class="overflow-hidden me-auto" style="text-align: center; margin-top: 10%;">
+                                                                            <apx-chart dir="ltr" class="apex-charts" [chart]="radialoptions.chart" [series]="data.confidence" [labels]="radialoptions.labels" [colors]="radialoptions.colors" [grid]="radialoptions.grid" [plotOptions]="radialoptions.plotOptions" [stroke]="radialoptions.stroke">
+                                                                            </apx-chart>
+                                                                            <p class="text-muted mt-4">Fix Confidence Score</p>
+                                                                            <button (click)="autofix(data.id , data.recommendations)" class="btn btn-success" style="font-size: 12px;" type="button" id="password-addon">  <i class="bx bxs-magic-wand"></i> Auto Fix</button>
                                                                         </div>
+                                                                       
+                                                                            
+                                                                       
                                                                     </div>
+                                                                    
+                                                                 
                         
                                                                 </div>
                                                             </li>
@@ -165,29 +167,39 @@
                                                     </ngx-simplebar>
                                                 </tab>
                                                 <tab heading="Dynamic" class="mt-4">
-                                                    <ngx-simplebar style="height: 500px;">
+                                                    <ngx-simplebar style="height: 600px;">
                                                         <ul class="list-group list-group-flush">
-                                                            <li class="list-group-item py-3" *ngFor="let data of staticdata; let i = index">
+                                                            <li class="list-group-item py-3" *ngFor="let data of dynamicData; let i = index">
                                                                 <div class="d-flex">
                                                                    
                                                                     <div class="align-self-center overflow-hidden me-auto">
                                                                         <div>
                                                                             <h5 class="font-size-14 text-truncate"><a href="javascript: void(0);" class="text-dark">
-                                                                                {{data.issue_type}}</a>
+                                                                                Vulnerability ID : {{data['Vulnerability ID']}}</a>
                                                                             </h5>
-                                                                            <p class="text-muted mb-0">Line no. {{data.line_number}}</p>
-                                                                            <p> Code with issue </p>
+                                                                            <p class="text-muted mb-0">Affected Spec: {{data['Affected Spec']}}</p>
+                                                                            <br>
+                                                                            <p> CVE </p>
                                                                             <div class="row file-content" style="max-height: 450px; max-width: 1024px;overflow-y: auto;overflow-x: auto;">
-                                                                                <pre class="line-numbers" [innerHTML]="data.code_snippet"></pre>
+                                                                                <pre class="line-numbers" [innerHTML]="data.CVE"></pre>
                                                                             </div>
-
-                                                                            <p> Recommended fix</p>
+                                                                            <br>
+                                                                            <p> Advisory</p>
                                                                             <div class="row file-content" style="max-height: 450px; max-width: 1024px;overflow-y: auto;overflow-x: auto;">
-                                                                                <pre class="line-numbers" [innerHTML]="data.recommended_code_fix"></pre>
+                                                                                <pre class="line-numbers" [innerHTML]="data.Advisory"></pre>
                                                                             </div>
+                                                                            <br>
+                                                                            <p> More Info : </p><a style="color: #3f09f1;text-decoration: underline;">{{data['More Info URL']}}</a>
                                                                         </div>
                                                                     </div>
-                        
+                                                                  <!--   <div class="ms-auto">
+                                                                        <div class="overflow-hidden me-auto" style="text-align: center; margin-top: 10%;">
+                                                                            <apx-chart dir="ltr" class="apex-charts" [chart]="radialoptions.chart" [series]="data.confidence" [labels]="radialoptions.labels" [colors]="radialoptions.colors" [grid]="radialoptions.grid" [plotOptions]="radialoptions.plotOptions" [stroke]="radialoptions.stroke">
+                                                                            </apx-chart>
+                                                                            <p class="text-muted mt-4">Fix Confidence Score</p>
+                                                                        </div>
+                                                                    </div> -->
+                                                                    
                                                                     <div class="dropdown ms-2" dropdown>
                                                                         <a class="text-muted font-size-14" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dropdownToggle>
                                                                             <i class="mdi mdi-dots-horizontal"></i>
@@ -246,14 +258,14 @@
 
         <div class="card filemanager-sidebar ms-lg-2">
             <div class="card-body">
-                <div class="text-center">
+              <!--   <div class="text-center">
                     <h5 class="font-size-15 mb-4">Confidence Score</h5>
-                    <!-- <div class="apex-charts" id="radial-chart"></div> -->
+                 
                     <apx-chart dir="ltr" class="apex-charts" [chart]="radialoptions.chart" [series]="radialoptions.series" [labels]="radialoptions.labels" [colors]="radialoptions.colors" [grid]="radialoptions.grid" [plotOptions]="radialoptions.plotOptions" [stroke]="radialoptions.stroke">
                     </apx-chart>
 
                     <p class="text-muted mt-4">258 lines of Vulnerable code of 15,00,000 lines code</p>
-                </div>
+                </div> -->
 
                 <div class="mt-4">
                     <div class="card border shadow-none mb-2">
