--- a/src/app/pages/projects/projectgrid/projectgrid.component.html
+++ b/src/app/pages/projects/projectgrid/projectgrid.component.html
@@ -2,6 +2,50 @@
   <app-page-title title="Dashboard" [breadcrumbItems]="breadCrumbItems"></app-page-title>
 
   <div class="row">
+    <div class=" col-xl-4 col-sm-6" *ngIf="isRepoCreated === 'yes'">
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex">
+            <div class="flex-shrink-0 me-4">
+              <div class="avatar-md">
+                <span class="avatar-title rounded-circle bg-light text-danger font-size-24" style="color:#556ee6 !important">
+                {{logo}}
+                </span>
+              </div>
+            </div>
+            <div class="flex-grow-1 overflow-hidden">
+              <h5 class="text-truncate font-size-15">
+                <a href="javascript: void(0);" class="text-dark">{{repoName}}</a>
+              </h5>
+              <p class="text-muted mb-4">{{descript}}</p>
+              <div class="avatar-group">
+                <div class="avatar-group-item">
+                  <a href="javascript: void(0);" class="d-inline-block">
+                    <img src="assets/images/usr/avatar3.jpeg" class="rounded-circle avatar-xs" alt />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="px-4 py-3 border-top">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item me-3" title="Scan Status" tooltip="Scan Status">
+              <span class="badge" [ngClass]="{ 'bg-success':  isRepoCreated === 'yes',
+                    'bg-warning': isRepoCreated === 'no'}">SAST Scan Completed</span>
+            </li>
+            <li class="list-inline-item me-3" title="Due Date" tooltip="Scan Date">
+              <i class="bx bx-calendar me-1"></i>
+              1 Aug, 24
+            </li>
+            <li class="list-inline-item me-3" title="Comments" tooltip="Vulnerabilities">
+              <i class="bx bx-shield-quarter me-1"></i>
+              3
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     @for(grid of projectData;track $index){
     <div class=" col-xl-4 col-sm-6">
       <div class="card">
@@ -53,7 +97,7 @@
               {{grid.date}}
             </li>
             <li class="list-inline-item me-3" title="Comments" tooltip="Vulnerabilities">
-              <i class="bx bx-error me-1"></i>
+              <i class="bx bx-shield-quarter me-1"></i>
               {{grid.comment}}
             </li>
           </ul>
